--- a/imagepicker/src/main/res/layout/activity_image.xml
+++ b/imagepicker/src/main/res/layout/activity_image.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#00000000"
     tools:context=".ImageActivity">
 
 </android.support.constraint.ConstraintLayout>
